fixed the transition overflow in quest

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -75,8 +75,10 @@ body h1, h2, h3, h4, h5, h6 {
     /* background-color: rgb(180, 48, 76); */
     background-color: rgb(103, 170, 170);
     padding: 10px;
+    height: 10vh;
     width: 100vw; 
     position: fixed;
+    top: 0;
 }
 /* Placeholder.js */
 .placeholder-container {
@@ -164,7 +166,8 @@ body h1, h2, h3, h4, h5, h6 {
     position: fixed;
     bottom: 0;
     right: 0;
-    left: 0;    
+    left: 0;
+    top: 87vh;    
     z-index: 5;
     /* raised z-index to 2 due to icons in questcard.js being at 1. Don't go lower. */
     box-shadow: inset rgba(245, 245, 245, 0.603) 0px 2px 10px;
@@ -342,7 +345,6 @@ body h1, h2, h3, h4, h5, h6 {
     /* height: 80vh; */
     /* transition-duration: transform 1s linear; */
     /* transition-property: transform; */
-        
         opacity: 0;
         transition-timing-function: ease-in-out;
         color: black;
@@ -362,7 +364,7 @@ body h1, h2, h3, h4, h5, h6 {
         padding: 10px 10px 10px 10px;
         z-index: 3;
         position: relative;
-        top: 6.5vh;
+        top: 7.5vh;
        
         /* height: 8vh; */
     }
@@ -382,8 +384,9 @@ body h1, h2, h3, h4, h5, h6 {
         z-index: 3;
         /* height: 8vh; */
         margin-bottom: 10vh;
-        position: relative;
-        top: 8.1vh;
+        position: fixed;
+        bottom: 0;
+        /* top: 8.1vh; */
         
     }
     .hiddenText{
@@ -397,8 +400,8 @@ body h1, h2, h3, h4, h5, h6 {
         transition-duration: 2s;
         transition-delay: .4s;
         height: 56.5vh;
-        /* height: 30vh; */
-        /* overflow-y: scroll; */
+        height: 30vh;
+        overflow-y: scroll;
         z-index: 0;
     }
 /* QuestLibrary.js */
@@ -417,7 +420,7 @@ body h1, h2, h3, h4, h5, h6 {
 }
 .quest-list {
     overflow-y: scroll;
-    /* height: 67vh; */
+    height: 67vh;
 }
 /* QuestCard.js */
 .quest-card {
